chore(docker): updated JVM options for JDK 24